@@ -1322,21 +1322,21 @@ SEL sel_registerTypedName_np(const char *selName, const char *types)
 
   if (types == 0)
     {
-      s = sel_get_any_typed_uid(name);
+      s = sel_get_any_typed_uid(selName);
     }
   else
     {
-      s = sel_get_typed_uid(name, types);
+      s = sel_get_typed_uid(selName, types);
     }
   if (s == 0)
     {
       if (types == 0)
         {
-          s = sel_register_name(name);
+          s = sel_register_name(selName);
         }
       else
         {
-          s = sel_register_typed_name(name, types);
+          s = sel_register_typed_name(selName, types);
         }
     }
   return s;
